--- a/app/src/main/res/values/atter.xml
+++ b/app/src/main/res/values/atter.xml
@@ -6,4 +6,15 @@
         <attr name="background_color" format="color"/>s
     </declare-styleable>
 
+    <attr name="borderRadius" format="dimension"/>
+    <attr name="type">
+        <enum name="circle" value="0"/>
+        <enum name="round" value="1"/>
+    </attr>
+
+    <declare-styleable name="RoundImageView">
+        <attr name="borderRadius"/>
+        <attr name="type"/>
+    </declare-styleable>
+
 </resources>
