--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,15 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorYellow">#feef50</color>
     <color name="colorWhite">#FFFFFF</color>
+
+    <color name="white">#ffffff</color>
+    <color name="dark">#777777</color>
+    <color name="red">#ff0000</color>
+    <color name="colorBule2">#0697ff</color>
+    <color name="colorBule3">#00b4ff</color>
+    <color name="colorGray">#999999</color>
+    <color name="colorGray1">#f9f9f9</color>
+    <color name="colorGrayHint1">#d0d0d7</color>
+    <color name="colorLine">#eeeeee</color>
+    <color name="phoneTextBlue">#128ce1</color>
 </resources>
